# MyMaya

./: .gitignore  .travis.yml  README.md  SCRIPT.md  TODO.md  build.gradle
raytracer/: CMakeLists.txt  Makefile
raytracer/check/: box-black.in  box-gray.in  box-white.in  center-point.in  directional-four-spheres.in  planes.in  shadow.in  transparency.in  triangle.in
raytracer/include/: ambiant_light.hh  attributes.hh  basic_triangle.hh  basic_triangle.hxx  box.hh  box.hxx  camera.hh  color.hh  color.hxx  directional_light.hh  image.hh  image.hxx  input.hh  light.hh  mesh.hh  plane.hh  point_light.hh  ray.hh  shape.hh  shape.hxx  sphere.hh  triangle.hh  vector3.hh  vector3.hxx
raytracer/include/octree/: leaf.hh  node.hh  octree.hh  octree.hxx
raytracer/src/: ambiant_light.cc  attributes.cc  basic_triangle.cc  box.cc  camera.cc  color.cc  directional_light.cc  image.cc  input.cc  light.cc  main.cc  mesh.cc  parser.cc  plane.cc  point_light.cc  ray.cc  shape.cc  sphere.cc  triangle.cc  vector3.cc
raytracer/src/octree/: leaf.cc  node.cc  octree.cc
src/: Main.java
src/controller/: MouseController.java  ObjController.java  OpenController.java  OpenObjController.java  OpenScriptController.java  RenderController.java  ScrollController.java  SelectController.java
src/model/: AmbientLight.java  Attributes.java  Box.java  Camera.java  ConverterModel.java  DirectionalLight.java  ExportSceneModel.java  HistoryModel.java  ImportSceneModel.java  Light.java  Mesh.java  ObjReader.java  Object3D.java  PointLight.java  SceneModel.java  Shape.java  Sphere.java
src/script/: ArithmeticParser.java  Execution.java  Lexer.java  Parser.java  QuotedString.java  ToPolish.java  Visitor.java
src/script/ast/: ArgumentListDef.java  ArithmeticExp.java  AstNode.java  BooleanExp.java  BooleanNameExp.java  BooleanNotExp.java  BooleanOpExp.java  BooleanOpNumericExp.java  CallExp.java  FunctionDef.java  IfExp.java  LoopExp.java  NameExp.java  NumericExp.java  NumericOpExp.java  SeqExp.java  StringExp.java  VarDef.java  WhileExp.java
src/script/function/: CustomFunction.java  EchoFunction.java  Function.java  HelpFunction.java  LaunchScriptFunction.java  ObjectFunction.java  RemoveFunction.java  RenameFunction.java  RotateFunction.java  (+4 more)
src/view/: AttributesView.java  MenuView.java  SceneView.java  WindowView.java
video/: video.mymel
(+18 files in other folders)
